fix(scss): align iadc theme with default
- content-layout aligned to use grid-template
- add missing macro-jira.scss in iadc template

--- a/src/assets/scss/iadc/_content-layout.scss
+++ b/src/assets/scss/iadc/_content-layout.scss
@@ -7,127 +7,88 @@
   position: relative;
   max-width: var(--base-width);
   margin: auto;
-  padding: 20px !important;
 
   &.fullWidth {
     max-width: 100%;
   }
 
-  .columnLayout {
-    padding-top: 10px;
-    // 2 equal columns layout
-    &.two-equal {
-      width: 100%;
+  .contentLayout2 {
+    .columnLayout {
+      padding-top: 10px;
       display: flex;
       flex-direction: row;
+      grid-template-rows: 1fr;
+      gap: 0px 0px;
+      grid-auto-flow: column;
+      max-width: 100vw;
 
-      .cell {
-        &.normal {
-          flex-basis: 50%;
-          margin-left: 32px;
-          @media screen and (max-width: 1024px) {
-            margin-left: 0px;
-          }
+      // 2 columns layout with smaller in the left
+      &.two-left-sidebar {
+        grid-template-columns: 0.3fr 0.7fr;
+        grid-template-areas: 'aside normal';
+        @media screen and (max-width: 1024px) {
+          flex-direction: column;
         }
       }
-      @media screen and (max-width: 1024px) {
-        width: 100%;
-        flex-direction: column;
-      }
-    }
 
-    // 2 columns layout with smaller in the right
-    &.two-right-sidebar {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-
-      .cell {
-        &.normal {
-          flex-basis: 66.6%;
-        }
-        &.aside {
-          flex-basis: 33.3%;
-          margin-left: 32px;
-          @media screen and (max-width: 1024px) {
-            margin-left: 0px;
-          }
+      // 2 columns layout with smaller in the right
+      &.two-right-sidebar {
+        grid-template-columns: 0.7fr 0.3fr;
+        grid-template-areas: 'normal aside';
+        @media screen and (max-width: 1024px) {
+          flex-direction: column;
         }
       }
-      @media screen and (max-width: 1024px) {
-        width: 100%;
-        flex-direction: column;
-      }
-    }
 
-    // 2 columns layout with smaller in the left
-    &.two-left-sidebar {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-
-      .cell {
-        &.normal {
-          flex-basis: 66.6%;
-          margin-left: 32px;
-        }
-        &.aside {
-          flex-basis: 33.3%;
-          @media screen and (max-width: 1024px) {
-            margin-left: 30px;
-          }
+      // 2 equal columns layout
+      &.two-equal {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 'normal normal';
+        @media screen and (max-width: 1024px) {
+          flex-direction: column;
         }
       }
-      @media screen and (max-width: 1024px) {
-        width: 100%;
-        flex-direction: column;
-      }
-    }
 
-    // 3 equal columns layout
-    &.three-equal {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-
-      .cell {
-        &.normal {
-          flex-basis: 33.3%;
-          margin-left: 32px;
-          @media screen and (max-width: 1024px) {
-            margin-left: 0px;
-          }
+      // 3 equal columns layout
+      &.three-equal {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas: 'normal normal normal';
+        @media screen and (max-width: 1024px) {
+          flex-direction: column;
         }
       }
-      @media screen and (max-width: 1024px) {
-        width: 100%;
-        flex-direction: column;
-      }
-    }
 
-    // 3 columns layout with 2 sides smaller
-    &.three-with-sidebars {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-
-      .cell {
-        &.normal {
-          flex-basis: 50%;
-          margin-left: 32px;
-          margin-right: 32px;
+      // 3 columns layout with 2 sides smaller
+      &.three-with-sidebars {
+        grid-template-columns: 0.25fr 0.5fr 0.25fr;
+        grid-template-areas: 'sidebars normal sidebars';
+        @media screen and (max-width: 1024px) {
+          flex-direction: column;
         }
-        &.sidebars {
-          flex-basis: 25%;
-          @media screen and (max-width: 1024px) {
-            margin-left: 0px;
-          }
-        }
-      }
-      @media screen and (max-width: 1024px) {
-        width: 100%;
-        flex-direction: column;
       }
     }
   }
+}
+
+.aside {
+  grid-area: aside;
+  margin-left: 10px;
+  // width: auto;
+}
+
+.normal {
+  grid-area: normal;
+  padding-left: 10px;
+  // margin-left: 10px;
+  width: 100%;
+}
+
+.sidebars {
+  grid-area: sidebars;
+  margin-left: 10px;
+  // width: auto;
+}
+
+.innerCell {
+  word-wrap: break-word;
 }
